api-gateway/deployment.yaml
# Shadowchats — Copyright (C) 2025
# Dorovskoy Alexey Vasilievich (One290 / 0ne290) <lenya.dorovskoy@mail.ru>
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version. See the LICENSE file for details.
# For full copyright and authorship information, see the COPYRIGHT file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: shadowchats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: vault-agent
          image: hashicorp/vault:1.17.6
          args: ["vault", "agent", "-config=/vault/config/vault-agent.hcl"]
          volumeMounts:
            - name: vault-config
              mountPath: /vault/config
            - name: vault-templates
              mountPath: /vault/templates
            - name: vault-secrets
              mountPath: /vault/secrets
        - name: api-gateway
          image: one290/shadowchats:api-gateway-v0.0.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: vault-secrets
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: vault-config
          configMap:
            name: vault-agent-api-gateway-config
        - name: vault-templates
          configMap:
            name: vault-templates-api-gateway
        - name: vault-secrets
          emptyDir: {}
