api-gateway/service.yaml
# Shadowchats — Copyright (C) 2025
# Dorovskoy Alexey Vasilievich (One290 / 0ne290) <lenya.dorovskoy@mail.ru>
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version. See the LICENSE file for details.
# For full copyright and authorship information, see the COPYRIGHT file.

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shadowchats
spec:
  selector:
    app: api-gateway
  ports:
    - name: http1
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http2
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
